; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_be-gssapi-common.c_pg_GSS_error.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_be-gssapi-common.c_pg_GSS_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GSS_C_GSS_CODE = common dso_local global i32 0, align 4
@GSS_C_MECH_CODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%s: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pg_GSS_error(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [128 x i8], align 16
  %10 = alloca [128 x i8], align 16
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = getelementptr inbounds [128 x i8], [128 x i8]* %9, i64 0, i64 0
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @GSS_C_GSS_CODE, align 4
  %14 = call i32 @pg_GSS_error_int(i8* %11, i32 128, i32 %12, i32 %13)
  %15 = getelementptr inbounds [128 x i8], [128 x i8]* %10, i64 0, i64 0
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @GSS_C_MECH_CODE, align 4
  %18 = call i32 @pg_GSS_error_int(i8* %15, i32 128, i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @errmsg_internal(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %20)
  %22 = getelementptr inbounds [128 x i8], [128 x i8]* %9, i64 0, i64 0
  %23 = getelementptr inbounds [128 x i8], [128 x i8]* %10, i64 0, i64 0
  %24 = call i32 @errdetail_internal(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %22, i8* %23)
  %25 = call i32 @ereport(i32 %19, i32 %24)
  ret void
}

declare dso_local i32 @pg_GSS_error_int(i8*, i32, i32, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg_internal(i8*, i8*) #1

declare dso_local i32 @errdetail_internal(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
